--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@ body {
 
 }
 .main {
+    position: relative;
     width: 500px;
     height: 600px;
     background-color: gray;
@@ -20,16 +21,16 @@ h1{
 }
 
 
-.screen {
+.display {
     width: 100%;
     height: 20%;
-    background-color: black;
+    background-color: lightgray;
 }
 
 .operators{
     display: flex;
     width: 100%;
-    height: 10%;
+    height: 15%;
     gap: 1px;
 
 }
@@ -77,7 +78,7 @@ h1{
 .numberRow1{
     display: flex;
     gap: 1px;
-    height: 15%;
+    height: 17%;
     width: 60%;
     background-color: green;
 }
@@ -105,7 +106,7 @@ h1{
 
 .numberRow2{
     display: flex;
-    height: 15%;
+    height: 17%;
     width: 60%;
     gap: 1px;
     background-color: green;
@@ -134,7 +135,7 @@ h1{
 
 .numberRow3{
     display: flex;
-    height: 15%;
+    height: 17%;
     width: 60%;
     gap: 1px;
     background-color: green;
@@ -194,5 +195,19 @@ h1{
     display: flex;
     height: 15%;
     width: 60%;
+    gap: 1px;
     background-color: green;
+}
+
+.equals {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 64%;
+    position: absolute;
+    right: 0;
+    top: 216px;
+    background-color: orange;
+
 }
