--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: rgb(70, 65, 65);
 
 }
 .main {
@@ -18,6 +19,8 @@ body {
 
 h1{
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: whitesmoke;
 }
 
 
@@ -25,7 +28,13 @@ h1{
     width: 100%;
     height: 20%;
     background-color: lightgray;
+    text-align: center;
+    font-size: 25px;
+    border: ;
+    
+
 }
+
 
 .operators{
     display: flex;
@@ -35,41 +44,51 @@ h1{
 
 }
 .operatorPlus {
+    border-radius: 15px;
     width: 20%;
     height: 100%;
-    background-color: red;
+    background-color: rgb(59, 59, 59);
     font-size: 25px;
+    color: white;   
 
 
 }
 .operatorMinus {
+    border-radius: 15px;
     width: 20%;
     height: 100%;
-    background-color: red;
+    background-color: rgb(59, 59, 59);
     font-size: 25px;
+    color: white;
 
 
 }
 .operatorTimes {
+    border-radius: 15px;
     width: 20%;
     height: 100%;
-    background-color: red;
+    background-color: rgb(59, 59, 59);
     font-size: 25px;
+    color: white;
 
 
 }
 .operatorBy {
+    border-radius: 15px;
     width: 20%;
     height: 100%;
-    background-color: red;
+    background-color: rgb(59, 59, 59);
     font-size: 25px;
+    color: white;
 
 
 }
 .operatorPercnt {
+    border-radius: 15px;
     width: 20%;
     height: 100%;
-    background-color: red;
+    background-color: rgb(59, 59, 59);
+    color: white;
     font-size: 25px;
 
 
@@ -80,24 +99,30 @@ h1{
     gap: 1px;
     height: 17%;
     width: 60%;
-    background-color: green;
+    background-color: gray;
 }
 
 .one {
+    font-size: 25px;
     display: flex;
     height: 100%;
     width: 33%;
+    border-radius: 15px;
     background-color: antiquewhite;
 }
 .two {
+    font-size: 25px;
     display: flex;
+    border-radius: 15px;
     display: flex;
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
 }
 .three {
+    font-size: 25px;
     display: flex;
+    border-radius: 15px;
     display: flex;
     height: 100%;
     width: 33%;
@@ -109,16 +134,22 @@ h1{
     height: 17%;
     width: 60%;
     gap: 1px;
-    background-color: green;
+    background-color: gray;
 }
 
 .four {
+    font-size: 25px;
+    border-radius: 15px;
+    border: solid 2px black;
+    border-style: outset;
     display: flex;
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
 }
 .five {
+    font-size: 25px;
+    border-radius: 15px;
     display: flex;
     display: flex;
     height: 100%;
@@ -126,6 +157,8 @@ h1{
     background-color: antiquewhite;
 }
 .six {
+    font-size: 25px;
+    border-radius: 15px;
     display: flex;
     display: flex;
     height: 100%;
@@ -138,16 +171,20 @@ h1{
     height: 17%;
     width: 60%;
     gap: 1px;
-    background-color: green;
+    background-color: gray;
 }
 
 .seven {
+    font-size: 25px;
+    border-radius: 15px;
     display: flex;
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
 }
 .eight {
+    font-size: 25px;
+    border-radius: 15px;
     display: flex;
     display: flex;
     height: 100%;
@@ -155,6 +192,8 @@ h1{
     background-color: antiquewhite;
 }
 .nine {
+    font-size: 25px;
+    border-radius: 15px;
     display: flex;
     display: flex;
     height: 100%;
@@ -167,16 +206,20 @@ h1{
     height: 15%;
     width: 60%;
     gap: 1px;
-    background-color: green;
+    background-color: gray;
 }
 
 .zero {
+    font-size: 25px;
+    border-radius: 15px;
     display: flex;
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
 }
 .coma {
+    font-size: 25px;
+    border-radius: 15px;
     display: flex;
     display: flex;
     height: 100%;
@@ -184,11 +227,14 @@ h1{
     background-color: antiquewhite;
 }
 .AC {
+    font-size: 25px;
+    border-radius: 15px;
     display: flex;
     display: flex;
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
+    font-size: 20px;
 }
 
 .numberRow3{
@@ -196,11 +242,12 @@ h1{
     height: 15%;
     width: 60%;
     gap: 1px;
-    background-color: green;
+    background-color: gray;
 }
 
 .equals {
     display: flex;
+    font-size: 40px;
     justify-content: center;
     align-items: center;
     width: 40%;
@@ -209,5 +256,6 @@ h1{
     right: 0;
     top: 216px;
     background-color: orange;
+    border-radius: 15px;
 
 }
