--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,21 +7,25 @@ body {
     flex-direction: column;
     background-color: rgb(70, 65, 65);
     background-image: url(../img/vintage-desk-with-antique-books-and-fountain-pen-il9o4m6tqlogmivz.jpg);
+    
+    
 
 }
 .main {
+    border: solid 15px beige;
     position: relative;
     width: 500px;
     height: 600px;
     background-color: gray;
     overflow: hidden;
     border-radius: 15px;
+    box-shadow: 0px 3px 0px #383838;
     
 }
 
 h1{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Orbitron', 'semi-bold', sans-serif;
     color: whitesmoke;
 }
 
@@ -29,15 +33,17 @@ h1{
 .display {
     width: 100%;
     height: 20%;
-    background-color: lightgray;
+    background-color: rgb(65, 62, 62);
     perspective: 1000px;
     transform: rotateX(-40deg);
-
+    box-shadow: 0px 3px 0px #383838;
     text-align: center;
-    font-size: 25px;
+    font-size: 30px;
     border: inset solid black 10px;
-    font-family:'Orbitron', sans-serif;;
-    color: rgb(195, 4, 4);
+    font-family:'Orbitron', 'semi-bold', sans-serif;;
+    color: rgb(253, 31, 31);
+    text-shadow:1px 1px 5px rgb(253, 31, 31);
+    
     
 
 }
@@ -56,6 +62,7 @@ h1{
     width: 20%;
     height: 100%;
     background-color: rgb(59, 59, 59);
+    box-shadow: 0px 3px 0px #383838;
     font-size: 25px;
     color: white;  
     cursor: pointer; 
@@ -67,6 +74,7 @@ h1{
     width: 20%;
     height: 100%;
     background-color: rgb(59, 59, 59);
+    box-shadow: 0px 3px 0px #383838;
     font-size: 25px;
     color: white;
     cursor: pointer;
@@ -78,6 +86,7 @@ h1{
     width: 20%;
     height: 100%;
     background-color: rgb(59, 59, 59);
+    box-shadow: 0px 3px 0px #383838;
     font-size: 25px;
     color: white;
     cursor: pointer;
@@ -89,6 +98,7 @@ h1{
     width: 20%;
     height: 100%;
     background-color: rgb(59, 59, 59);
+    box-shadow: 0px 3px 0px #383838;
     font-size: 25px;
     color: white;
     cursor: pointer;
@@ -100,6 +110,7 @@ h1{
     width: 20%;
     height: 100%;
     background-color: rgb(59, 59, 59);
+    box-shadow: 0px 3px 0px #383838;
     color: white;
     font-size: 25px;
     cursor: pointer;
@@ -123,7 +134,7 @@ h1{
     width: 33%;
     border-radius: 15px;
     background-color: antiquewhite;
-    box-shadow: 0px 3px 0px #999999;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
     
 }
@@ -140,7 +151,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
-    box-shadow: 0px 3px 0px #999999;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
 }
 .two:active {
@@ -156,7 +167,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
-    box-shadow: 0px 3px 0px #999999;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
 }
 .three:active {
@@ -182,7 +193,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
-    box-shadow: 0px 3px 0px #999999;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
 }
 .four:active {
@@ -198,7 +209,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
-    box-shadow: 0px 3px 0px #999999;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
 }
 .five:active {
@@ -214,7 +225,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
-    box-shadow: 0px 3px 0px #999999;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
 }
 .six:active {
@@ -238,7 +249,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
-    box-shadow: 0px 3px 0px #999999;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
 }
 .seven:active {
@@ -254,7 +265,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
-    box-shadow: 0px 3px 0px #999999;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
 }
 .eight:active {
@@ -270,7 +281,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
-    box-shadow: 0px 3px 0px #999999;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
 }
 
@@ -294,6 +305,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
 }
 .zero:active {
@@ -309,6 +321,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
+    box-shadow: 0px 3px 0px #383838;
     cursor: pointer;
 }
 .coma:active {
@@ -324,6 +337,7 @@ h1{
     height: 100%;
     width: 33%;
     background-color: antiquewhite;
+    box-shadow: 0px 3px 0px #383838;
     font-size: 20px;
     cursor: pointer;
 }
@@ -353,5 +367,7 @@ h1{
     top: 216px;
     background-color: orange;
     border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 0px 3px 0px #383838;
 
 }
