--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,11 @@ h1{
 
 
 }
+.operatorPlus:active {
+    background: rgb(183, 183, 183);
+    opacity: 0.5;
+
+}
 .operatorMinus {
     border-radius: 15px;
     width: 20%;
@@ -81,6 +86,11 @@ h1{
 
 
 }
+.operatorMinus:active {
+    background: rgb(183, 183, 183);
+    opacity: 0.5;
+
+}
 .operatorTimes {
     border-radius: 15px;
     width: 20%;
@@ -91,6 +101,15 @@ h1{
     color: white;
     cursor: pointer;
 
+}
+.operatorTimes:active {
+    background: rgb(183, 183, 183);
+    opacity: 0.5;
+
+}
+.operatorMinus:active {
+    background: rgb(183, 183, 183);
+    opacity: 0.5;
 
 }
 .operatorBy {
@@ -102,7 +121,10 @@ h1{
     font-size: 25px;
     color: white;
     cursor: pointer;
-
+}
+.operatorBy:active {
+    background: rgb(183, 183, 183);
+    opacity: 0.5;
 
 }
 .operatorPercnt {
@@ -115,6 +137,10 @@ h1{
     font-size: 25px;
     cursor: pointer;
 
+}
+.operatorPercnt:active {
+    background: rgb(183, 183, 183);
+    opacity: 0.5;
 
 }
 
@@ -369,5 +395,10 @@ h1{
     border-radius: 15px;
     cursor: pointer;
     box-shadow: 0px 3px 0px #383838;
+
+}
+.equals:active {
+    background: rgb(106, 104, 104);
+    opacity: 0.5;
 
 }
